# zero2prod

./: Cargo.toml  dev_loop.sh  spec.yaml
migrations/: 20230910191920_create_subscriptions_table.sql
scripts/: dev_loop.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/common/: mod.rs
zero2prod/: Cargo.toml  Dockerfile
zero2prod/.cargo/: config.toml
zero2prod/.sqlx/: query-58bc05fe58dbbb39fb592e020fdbd0ef02875d71544dbf002a52fd064697a83e.json
zero2prod/configuration/: base.yaml
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  main.rs  telemetry.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: subscriptions.rs
zero2prod/tests/common/: mod.rs
