[package]
authors = ["Adrien Wald <adrien@coloop.ai>"]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.4.0"
config = "0.13.3"
serde = {version = "1.0.188", features = ["derive"]}
sqlx = {version = "0.7.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11.20"
